<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<Button
            android:id="@+id/btnFilter"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:onClick="btnFilter"
            android:text="Filtre"
            android:textSize="20sp" />-->

        <Spinner
            android:id="@+id/spinnerWarehouse"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/magazalar" />
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_below="@id/spinnerWarehouse"
            android:contentDescription="@string/kategoriler"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"/>
        <Spinner
            android:id="@+id/spinnerMarka"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/spinnerCategory"
            android:contentDescription="@string/markalar"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/txtCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/spinnerMarka"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:ellipsize="end"
            android:hint="@string/barkod"
            android:inputType="number"
            android:maxEms="13"
            android:lines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtAdet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtCode"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:hint="@string/adet"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints=""/>
        <RelativeLayout
            android:id="@+id/rLayoutHead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtAdet"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/btnOku"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:onClick="btnScanCode"
                android:text="@string/btn_tara"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnKaydet"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true"
                android:onClick="btnSave"
                android:text="@string/btn_kaydet"
                android:textSize="25sp" />

    </RelativeLayout>

        <TextView
            android:id="@+id/tViewSonEklenen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rLayoutHead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"

            android:text="@string/son_eklenen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tViewBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tViewSonEklenen"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/barkod"
            android:textSize="18sp" />
    <TextView
        android:id="@+id/tViewStok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stok"
        android:textSize="18sp"
        android:layout_below="@+id/tViewSonEklenen"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"/>
    <TextView
        android:id="@+id/tViewAddBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/tViewBarcode"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"/>
    <TextView
        android:id="@+id/tViewAddStok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:layout_below="@+id/tViewStok"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>